# camaas_converters

./: CMakeLists.txt  converters.sln
Include/: arch_ac_domain_xml2bin.h  basedefs.h  bin2text.h  binary_streams.h  domain_converter.h  exceptions.h  face.h  hgt_optimizer.h  impl_arch_ac_domain_xml2bin.h  impl_buf_ostream.h  impl_radio_hf_domain_xml2bin.h  impl_xml_parser.h  point.h  radio_hf_domain_xml2bin.h  text_streams.h  xml2bin.h  xml_exceptions.h  xml_parser.h
bin2txt/: .gitignore  CMakeLists.txt  bin2text.cpp  bin2text.h  bin2txt.vcxproj  bin2txt.vcxproj.filters  entrypoint.cpp
src/: bin2text.cpp  binary_streams.cpp  exceptions.cpp  face.cpp  hgt_optimizer.cpp  impl_buf_ostream.cpp  text_streams.cpp  xml2bin.cpp  xml_exceptions.cpp  xml_parser.cpp
xml2bin/: .gitignore  CMakeLists.txt  arch_ac_domain_xml2bin.cpp  arch_ac_domain_xml2bin.h  domain_converter.cpp  domain_converter.h  entrypoint.cpp  hgt_optimizer.cpp  hgt_optimizer.h  radio_hf_domain_xml2bin.cpp  radio_hf_domain_xml2bin.h  xml2bin.cpp  xml2bin.h  xml2bin.vcxproj  xml2bin.vcxproj.filters  xml_parser.cpp
